tests/base/valid/Subtype_Valid_4.whiley
define sr4set as {int}

void System::main([string] args):
    x = {1}
    out->println(str(x))
    
