tests/base/invalid/Function_Invalid_7.whiley
define Global as { Broken field }

int Broken():
    return 1
